--- a/_posts/2019-11-22-post - 副本.md
+++ b/_posts/2019-11-22-post - 副本.md
@@ -3,6 +3,7 @@ layout: wenzhang
 title: 花开了，然后凋零。星星是璀璨的，
 title1: 可那光芒也会消失。
 author: 天天
+pic: /jekylls/img/blog-post-2.jpg
 ---
 这个地球、太阳甚至是连这个宇宙也会有死亡的时候，人的一生和这些东西相比，简直就像刹那间的事情，我们的一切都只是刹那间的邂逅，最后都是要归入死的永眠。
 这个地球、太阳甚至是连这个宇宙也会有死亡的时候，人的一生和这些东西相比，简直就像刹那间的事情，我们的一切都只是刹那间的邂逅，最后都是要归入死的永眠。
