--- a/_posts/2019-11-22-post - 副本 (4).md
+++ b/_posts/2019-11-22-post - 副本 (4).md
@@ -3,6 +3,7 @@ layout: wenzhang
 title: 低头是一种能力，
 title1: 它不是自卑，也不是怯弱，它是清醒中的嬗变。有时，稍微低一下头，或者我们的人生路会更精彩。
 author: 天天
+pic: /jekylls/img/blog-post-4.jpeg
 ---
 人生，就是这样，选择不易，放弃艰难。人生之苦，苦在选择，人生之难，难在放弃。人生，说到底，就是选择与放弃。
 人生，就是这样，选择不易，放弃艰难。人生之苦，苦在选择，人生之难，难在放弃。人生，说到底，就是选择与放弃。
